<resources>
    <string name="app_name">MadMarket</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Create Account</string>
    <string name="login_fail">login fail</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="bio">Enter Bio</string>
    <string name="notifactions">Enable Notifications</string>
    <string name="email_hint">Enter Email</string>
    <string name="email">Email</string>
</resources>